--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
